Fix report's filter overlap issue with notification drawer

--- a/app/stylesheet/notifications.scss
+++ b/app/stylesheet/notifications.scss
@@ -63,7 +63,7 @@
   position: absolute;
   right: 0;
   width: 450px;
-  z-index: 3;
+  z-index: 1000;
   display: flex;
   flex-direction: column;
   overflow-y: hidden;
